Fixed MainGradientShape appearing before position adjustments causing a flicker

--- a/icons/IsometricProgrammer/IsometricProgrammer.module.css
+++ b/icons/IsometricProgrammer/IsometricProgrammer.module.css
@@ -174,6 +174,7 @@
   background: radial-gradient(rgb(12, 19, 97), transparent, transparent);
   z-index: -1;
   opacity: 0.6;
+  display: none;
 }
 
 .baseOrbs {
